<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

<string name="app_name">MDP Group11</string>
<string name="action_settings">Settings</string>
<string name="intro_message">intro_message</string>

<!--  String for Bluetooth -->

<string name="Send">Send</string>
<string name="bt_not_connected">Not connected to a device!</string>
<string name="bt_not_enabled">Bluetooth not enabled. Leaving Bluetooth Chat.</string>
<string name="title_connecting_">Connecting...</string>
<string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
<string name="title_not_connected">Not connected</string>

<!--  String for DeviceListActivity -->

<string name="title_paired_devices">Paired Devices</string>
<string name="title_other_devices">Other Available Devices</string>
<string name="button_scan">Scan for devices</string>
<string name="scanning">Scanning for devices...</string>
<string name="select_device">Connect to the selected device</string>
<string name="no_paired">No paired device</string>
<string name="none_found">No devices found</string>

<!-- String for Options Menu -->

<string name="set_config_1">Set String 1 (C1)</string>
<string name="set_config_2">Set String 2 (C2)</string>
<string name="swipe_input_gesture">Enable Gesture Control</string>
<string name="show_data_strings">Show Data Strings</string>
<string name="show_bt_service">Show Bluetooth Comm</string>
<string name="image_recognition_string">Image Recognition String</string>
<string name="mdf_string_2_discovered_obstacles">MDF String 2: Discovered Obstacles</string>
<string name="mdf_string_1_explored_squares">MDF String 1: Explored Squares</string>
<string name="secure_connect">Connect to Device</string>
<string name="insecure_connect">Connect a device (Insecure)</string>
<string name="mk_discoverable">Make Device Discoverable</string>
<string name="set_wp">Set Waypoint</string>
<string name="remove_wp">Remove Waypoint</string>
<string name="set_rbt_pos">Set Robot Position</string>
<string name="auto_update_map">Auto Update Map</string>
<string name="update_map">Manual Update Map</string>

</resources>
