<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ntu.mdpg11app.app.MainActivity">
    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:title="@string/secure_connect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/discoverable"
        android:title="@string/mk_discoverable"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_robot_position"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/set_rbt_pos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_waypoint"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/set_wp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_waypoint"
        android:orderInCategory="100"
        android:title="@string/remove_wp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_auto_update_map"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/auto_update_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update_map"
        android:orderInCategory="100"
        android:title="@string/update_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_config_string1"
        android:orderInCategory="100"
        android:title="@string/set_config_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_config_string2"
        android:orderInCategory="100"
        android:title="@string/set_config_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_enable_swipe_input"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="100"
        android:title="@string/swipe_input_gesture"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_data_strings"
        android:orderInCategory="100"
        android:title="@string/show_data_strings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_bluetooth_chat"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="100"
        android:title="chat"
        app:showAsAction="ifRoom" />
</menu>
